force-app/main/default/objects/Knowledge__kav/fields/Chat_Answer_Bot__c.field-meta.xml
<CustomField>
    <fullName>Chat_Answer_Bot__c</fullName>
    <label>Chat Answer Bot</label>
    <type>TextArea</type>
</CustomField>