force-app/main/default/objects/Knowledge__kav/fields/Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_URL__c</fullName>
    <description>Community URL for Articles</description>
    <formula>&quot;/service/s/article/&quot; &amp; UrlName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Community URL for Articles</inlineHelpText>
    <label>Community URL</label>
    <type>Text</type>
</CustomField>