force-app/main/default/objects/Knowledge__kav/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <inlineHelpText>URL for Image when displaying knowledge articles as CMS records on a community (added by BTMURPHY)</inlineHelpText>
    <label>Image</label>
    <type>Url</type>
</CustomField>