force-app/main/default/objects/Knowledge__kav/fields/Is_a_Top_10_FAQ__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Top_10_FAQ__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this flag if you want to use this as one of the top 10 FAQ&apos;s on the Department of the Future (Service) Community CMS Records (added by BTMURPHY)</inlineHelpText>
    <label>Is a Top 10 FAQ</label>
    <type>Checkbox</type>
</CustomField>