force-app/main/default/objects/Knowledge__kav/fields/Is_LPI_Top_10__c.field-meta.xml
<CustomField>
    <fullName>Is_LPI_Top_10__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this flag if you want to use this as one of the top 10 FAQ&apos;s on the LPI Community CMS Records (added by BTMURPHY)</inlineHelpText>
    <label>Is LPI Top 10</label>
    <type>Checkbox</type>
</CustomField>