force-app/main/default/objects/Knowledge__kav/listViews/Top_10_FAQ_s_for_Community.listView-meta.xml
<ListView>
    <fullName>Top_10_FAQ_s_for_Community</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>Is_a_Top_10_FAQ__c</columns>
    <columns>Image__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <filters>
        <field>Is_a_Top_10_FAQ__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Top 10 FAQ&apos;s for Service Community</label>
</ListView>